Finalize compatible wired and smart 3-way switching
